[package]
name = "fork_and_consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.1"
hex-literal = "0.3.4"
chrono = "0.4"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }